Having issues with the blurr effect covering my other divs. Trying to resolve.

--- a/less/index.less
+++ b/less/index.less
@@ -60,10 +60,20 @@ html, body {
 @color_2: rgba(255, 255, 255, 0.7);
 @color_3: rgba(255, 255, 255, 0.5);
 @color_4: #999;
+@color_5: #f0f0f0; // Appears 3 times
+@color_6: #fdeeed; // Appears 3 times
+@color_7: #fbc9c4; // Appears 3 times
+@color_8: #f6877c; // Appears 3 times
+@color_9: #fde4e1; // Appears 3 times
+@color_10: #fcd9d5; // Appears 3 times
+@color_11: #f9b3ac; // Appears 3 times
+@color_12: #f89d94; // Appears 3 times
 @font_family_1: "Pathway Gothic One", sans-serif;
 @font_family_2: Cardo;
+@font_family_3: Raleway;
+@height0: 1.25em; // Appears 2 times
 
-@import "https://fonts.googleapis.com/css?family=Cardo|Pathway+Gothic+One";
+@import "https://fonts.googleapis.com/css?family=Cardo|Pathway+Gothic+One|Raleway";
 /*Navigation*/
 nav.page-navigation {
     width: 80px;
@@ -83,6 +93,346 @@ nav.page-navigation {
         width: 80%;
     }
 
+/*BIO*/
+
+
+timeline-about {
+    z-index: 1000
+}
+
+.timeline-bio {
+    -moz-border-radius: 6px;
+    -moz-box-shadow: 0 2px 5px rgba(0,0,0,0.075);
+    -webkit-border-radius: 6px;
+    -webkit-box-shadow: 0 2px 5px rgba(0,0,0,0.075);
+    background-color: #ffffff;
+    border-radius: 6px;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.075);
+    margin: 120px auto 120px;
+    padding: 0 20px 20px;
+    text-align: center;
+    max-width: 700px;
+    z-index: 1000;
+
+    &:hover {
+        .photo-flip {
+            -webkit-transform: rotateY(180deg);
+            transform: rotateY(180deg);
+
+            img {
+                &:first-child {
+                    opacity: 0;
+                }
+
+                &:last-child {
+                    opacity: 1;
+                }
+            }
+        }
+    }
+
+    h2 {
+        color: #333333;
+        font-size: 32px;
+        font-weight: 600;
+        margin-bottom: 15px;
+    }
+
+    h4 {
+        color: #00baff;
+        font-size: 13px;
+        letter-spacing: 1px;
+        margin-bottom: 25px;
+    }
+
+    p {
+        color: #666666;
+        font-size: 16px;
+        line-height: 26px;
+        margin-bottom: 20px;
+    }
+}
+
+.timeline-photo-flip {
+    -moz-box-shadow: 0 0 0 13px @color_5;
+    -moz-transition: all 0.3s ease-in-out;
+    -webkit-box-shadow: 0 0 0 13px @color_5;
+    -webkit-transition: all 0.3s ease-in-out;
+    border-radius: 100px;
+    box-shadow: 0 0 0 13px @color_5;
+    height: 150px;
+    margin: auto;
+    overflow: hidden;
+    position: relative;
+    top: -60px;
+    transition: all 0.3s ease-in-out;
+    width: 150px;
+
+    img {
+        -moz-transition: all 0.3s ease-in-out;
+        -webkit-transition: all 0.3s ease-in-out;
+        border-radius: 100px;
+        left: 0;
+        position: absolute;
+        top: 0;
+        transition: all 0.3s ease-in-out;
+
+        &:first-child {
+            z-index: 1;
+        }
+
+        &:last-child {
+            -webkit-transform: rotateY(180deg);
+            opacity: 0;
+            transform: rotateY(180deg);
+            z-index: 0;
+        }
+    }
+}
+
+
+// Skills
+timeline-skills {
+    z-index: 1000
+}
+
+.timeline-skills {
+    -moz-border-radius: 6px;
+    -moz-box-shadow: 0 2px 5px rgba(0,0,0,0.075);
+    -webkit-border-radius: 6px;
+    -webkit-box-shadow: 0 2px 5px rgba(0,0,0,0.075);
+    background-color: #ffffff;
+    border-radius: 6px;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.075);
+    margin: 120px auto 120px;
+    padding: 0 20px 20px;
+    text-align: center;
+    max-width: 700px;
+    z-index: 1000;
+
+    &:hover {
+        .photo-flip {
+            -webkit-transform: rotateY(180deg);
+            transform: rotateY(180deg);
+
+            img {
+                &:first-child {
+                    opacity: 0;
+                }
+
+                &:last-child {
+                    opacity: 1;
+                }
+            }
+        }
+    }
+
+    h2 {
+        color: #333333;
+        font-size: 32px;
+        font-weight: 600;
+        margin-bottom: 15px;
+    }
+
+    h4 {
+        color: #00baff;
+        font-size: 13px;
+        letter-spacing: 1px;
+        margin-bottom: 25px;
+    }
+
+    p {
+        color: #666666;
+        font-size: 16px;
+        line-height: 26px;
+        margin-bottom: 20px;
+    }
+}
+
+.timeline-skills-photo-flip-hold {
+    -moz-box-shadow: 0 0 0 13px @color_5;
+    -moz-transition: all 0.3s ease-in-out;
+    -webkit-box-shadow: 0 0 0 13px @color_5;
+    -webkit-transition: all 0.3s ease-in-out;
+    border-radius: 100px;
+    box-shadow: 0 0 0 13px @color_5;
+    height: 150px;
+    margin: auto;
+    overflow: hidden;
+    position: relative;
+    top: -60px;
+    transition: all 0.3s ease-in-out;
+    width: 150px;
+
+    img {
+        -moz-transition: all 0.3s ease-in-out;
+        -webkit-transition: all 0.3s ease-in-out;
+        border-radius: 100px;
+        left: 0;
+        position: absolute;
+        top: 0;
+        transition: all 0.3s ease-in-out;
+
+        &:first-child {
+            z-index: 1;
+        }
+
+        &:last-child {
+            -webkit-transform: rotateY(180deg);
+            opacity: 0;
+            transform: rotateY(180deg);
+            z-index: 0;
+        }
+    }
+}
+.title-skills {
+    font-family: "@font_family_1";
+    font-size: 2em;
+    letter-spacing: 10px;
+    margin-top: 4em;
+    margin: 4rem auto;
+    text-align: center;
+    transition: all 400ms ease-in-out;
+}
+
+.bar {
+    margin: 2em auto;
+    width: 80%;
+}
+
+.skill {
+    font-size: .8em;
+    margin-bottom: 0.25em;
+    text-transform: uppercase;
+    text-align: left;
+}
+
+.speech-bubble {
+    border-radius: 0.3em;
+    display: none;
+    font-size: 0.75em;
+    line-height: 2em;
+    min-width: 3em;
+    position: absolute;
+    text-align: center;
+    top: -2.7em;
+
+    &:after {
+        border: 0.5em solid transparent;
+        content: "";
+        left: 50%;
+        margin-left: -0.5em;
+        position: absolute;
+        top: 100%;
+    }
+}
+
+.html {
+    background: @color_6;
+    left: calc(80% - 1.5em);
+
+    &:after {
+        border-top-color: @color_6;
+    }
+}
+
+.photo {
+    background: @color_7;
+    left: calc(70% - 1.5em);
+
+    &:after {
+        border-top-color: @color_7;
+    }
+}
+
+.friends {
+    background: @color_8;
+    left: calc(100% - 1.5em);
+
+    &:after {
+        border-top-color: @color_8;
+    }
+}
+
+.jquery {
+    background: @color_9;
+    left: calc(25% - 1.5em);
+
+    &:after {
+        border-top-color: @color_9;
+    }
+}
+
+.java {
+    background: @color_10;
+    left: calc(25% - 1.5em);
+
+    &:after {
+        border-top-color: @color_10;
+    }
+}
+
+.illustrator {
+    background: @color_11;
+    left: calc(95% - 1.5em);
+
+    &:after {
+        border-top-color: @color_11;
+    }
+}
+
+.indesign {
+    background: @color_12;
+    left: calc(50% - 1.5em);
+
+    &:after {
+        border-top-color: @color_12;
+    }
+}
+
+.bar-outer {
+    background: #EEEEEE;
+    border-radius: 0.3em;
+    height: @height0;
+    position: relative;
+}
+
+.bar-inner {
+    border-radius: 0.3em;
+    height: @height0;
+    width: 0;
+}
+
+.ht {
+    background: @color_6;
+}
+
+.jq {
+    background: @color_9;
+}
+
+.sk {
+    background: @color_10;
+}
+
+.ph {
+    background: @color_7;
+}
+
+.il {
+    background: @color_11;
+}
+
+.in {
+    background: @color_12;
+}
+
+.fl {
+    background: @color_8;
+}
+
+
+/*timeline work history*/
 
 .timeline {
     display: flex;
